--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-cards-bootstrap",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://Erik161.github.io/React-Cards-React-Bootstrap",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +17,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build ",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
